# homekit

./: .gitignore  .travis.yml  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
homekit/: Cargo.toml
homekit-demo/: .gdbinit  Cargo.toml
homekit-demo/src/: logger.rs  main.rs
homekit/src/: advertise.rs  attributes.rs  lib.rs
homekit/src/snapshots/: tests__data_as_adstructure.snap
nostd_srp/: Cargo.toml
nostd_srp/src/: lib.rs  tests.rs
washmon/: Cargo.toml  memory.x
washmon/src/: main.rs
