[package]
name = "homekit-demo"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
publish = false

[dependencies]
homekit = { path = "../homekit" }
rubble = { git = "https://github.com/chocol4te/rubble.git", rev = "b82d0a2", features = ["log"] }
rubble-nrf52 = { git = "https://github.com/chocol4te/rubble.git", rev = "b82d0a2", features = ["52810"] }
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
cortex-m-rtfm = "0.5.0"
cortex-m-rt = "0.6.8"
nrf52810-hal = { version = "0.8.1", features = ["rt"] }
panic-semihosting = "0.5.2"
bbqueue = "0.3.2"
log = { version = "0.4.6", features = ["release_max_level_warn"] }
byteorder = { version = "1.3.2", default-features = false }
