[package]
name = "homekit"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
rubble = { git = "https://github.com/jonas-schievink/rubble.git", features = ["log"] }
byteorder = { version = "1.3.1", default-features = false }

[dev-dependencies]
insta = "0.7.4"
