[package]
name = "homekit"
version = "0.0.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
description = "`no_std` HomeKit Accessory Protocol implementation"
license = "MPL-2.0"
documentation = "https://docs.rs/homekit"
homepage = "https://github.com/chocol4te/homekit"
repository = "https://github.com/chocol4te/homekit"

[dependencies]
rubble = { git = "https://github.com/chocol4te/rubble.git", rev = "b82d0a2", features = ["log"] }
byteorder = { version = "1.3.2", default-features = false }

[dev-dependencies]
insta = "0.8.1"
